name:          wrecker-ui
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          wrecker-ui
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , sqlite-simple
                  , text
                  , time
                  , aeson
                  , containers
                  , http-types
                  , wai-cors
                  , directory
