name:          wrecker-ui
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple
license:             BSD3
license-file:        LICENSE

executable          wrecker-ui
    hs-source-dirs: src
    main-is:        Main.hs
    other-modules:  Model
                  , Invoker
                  , Scheduler
                  , Recorder
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , text
                  , time
                  , aeson
                  , containers
                  , http-types
                  , wai-cors
                  , directory
                  , persistent
                  , persistent-template
                  , persistent-sqlite
                  , persistent-postgresql
                  , esqueleto
                  , monad-control
                  , monad-logger
                  , resourcet
                  , transformers
                  , resource-pool
                  , postgresql-simple-url
                  , postgresql-simple
                  , process
                  , temporary
                  , bytestring
                  , iso8601-time
                  , stm
                  , async
                  , distributed-process
                  , network-transport
                  , network-transport-tcp
                  , distributed-process-simplelocalnet
                  , distributed-process-async
                  , distributed-static
                  , binary
                  , mtl
                  , HostAndPort
